Ce commit effectue une mise à jour significative de la pile technologique du projet, en remplaçant le framework de sérialisation Kryo par FST (Fast-Serialization).
Ce changement est motivé par la recherche de la latence la plus minimale possible